# neurom-backend

./: .gitignore  CLAUDE.md  EEG_recording_2025-10-27-23.02.20.csv  README.md  eval_algorithms.py  pyproject.toml  requirements.txt  task.ipynb  test.py
data_store/: 0.3 Join.json  0.4 Complete.json  0.4 Test.json  Basic 0.32.json  Basic 5.json  Ear Twitch Experiment.json  Everything.json  Megadataset.json  Multi Blinks 0.32.json  Noise.json  Nothing.json  Scrunch 0.32.json  Side Blinks 0.32.json  Single Side Blinks.json  Soft Blink.json  Zeros.json  examples.json  justin.json
keybind_store/: Krunker 2.json  Krunker.json  Mouse 2.0.json  Mouse.json  Reels.json  Test.json  Trainer.json
src/cli/: config.py  dummy.py  run.py
src/eeg/: data.py  detect.py  emulator.py  schema.py  status.py  stream_thread.py  utils.py
src/keybinding/: algorithms.py  handler.py  model.py
src/server/: main.py  router.py  websocket.py
